AX: Bug 147737 is causing test failures in Mavericks WK1 https://bugs.webkit.org/show_bug.cgi?id=147763

Source/WebCore:

Restrict change made in 147737 to ElCapitan+ because it is causing tests
to fail in Mavericks.

Patch by Doug Russell <d_russell@apple.com> on 2015-08-07
Reviewed by Chris Fleizach.

Fixes failing tests.

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::setEnhancedUserInterfaceAccessibility):

LayoutTests:

Patch by Doug Russell <d_russell@apple.com> on 2015-08-07
Reviewed by Chris Fleizach.

* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/165867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188120 268f45cc-cd09-0410-ab3c-d52691b4dbfc