Source/WebCore/accessibility/AXObjectCache.cpp
@@ -129,8 +129,12 @@ void AXObjectCache::disableAccessibility()
 void AXObjectCache::setEnhancedUserInterfaceAccessibility(bool flag)
 {
     gAccessibilityEnhancedUserInterfaceEnabled = flag;
+#if PLATFORM(MAC)
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 101100
     if (flag)
         enableAccessibility();
+#endif
+#endif
 }
 
 AXObjectCache::AXObjectCache(Document& document)
